code/dotnet/InvestmentBankingOfficeRefresh/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Banking Office Refresh client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.InvestmentBankingOfficeRefresh)](https://www.nuget.org/packages/FactSet.SDK.InvestmentBankingOfficeRefresh)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Service for refreshing models with refreshable FactSet objects (e.g., =FDS codes)

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- Package version: 0.20.2
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.InvestmentBankingOfficeRefresh -v 0.20.2
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.InvestmentBankingOfficeRefresh -Version 0.20.2
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.InvestmentBankingOfficeRefresh.Api;
using FactSet.SDK.InvestmentBankingOfficeRefresh.Client;
using FactSet.SDK.InvestmentBankingOfficeRefresh.Model;

namespace Example
{
    public static class PostWorkbookExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.InvestmentBankingOfficeRefresh.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new ModelRefreshApi(config);
            var body = new System.IO.MemoryStream(System.IO.File.ReadAllBytes("/path/to/file.txt"));  // System.IO.Stream | 
            var nowHandlingEnabled = true;  // bool? | Option to handle =NOW codes. (optional) 
            var refreshAutoFilters = true;  // bool? | Option to refresh codes in autofilters. (optional) 
            var resizeArrays = true;  // bool? | Option to resize arrays (optional) 

            try
            {
                // Upload a model
                JobStatus result = apiInstance.PostWorkbook(body, nowHandlingEnabled, refreshAutoFilters, resizeArrays);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling ModelRefreshApi.PostWorkbook: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/office-refresh/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ModelRefreshApi* | [**GetFileById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/ModelRefreshApi.md#getfilebyid) | **GET** /refresh/{id} | Retrieve a calculated file by resource ID.
*ModelRefreshApi* | [**GetStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/ModelRefreshApi.md#getstatusbyid) | **GET** /refresh/{id}/status | Get the status of the refresh job with the given resource ID
*ModelRefreshApi* | [**PostWorkbook**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/ModelRefreshApi.md#postworkbook) | **POST** /refresh | Upload a model


## Documentation for Models

 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/Error.md)
 - [Model.Errors](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/Errors.md)
 - [Model.JobStatus](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/JobStatus.md)
 - [Model.JobStatusData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/InvestmentBankingOfficeRefresh/v0/docs/JobStatusData.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
